Fixed on iphone4 landscape

--- a/css/splash.css
+++ b/css/splash.css
@@ -120,7 +120,7 @@
     @media screen and (min-width: 470px) and (max-width: 1016px) {
         /* small desktop sizes */
         .ipad__img {
-            width: 10.875rem; height: 27.75rem; left: -3.25em; top: 9em;
+            width: 10.875rem; height: 27.75rem; left: -3.25rem; top: 9rem;
         }
             .ipad__tooltip { 
                 left: 11.5em;
@@ -144,7 +144,13 @@
 
     @media screen and (min-width: 470px) and (max-width: 560px) and (orientation: landscape) {
         .ipad__img {
-            left: -4em;
+            width: 7.5rem; left: -1.75rem;
+        }
+        .iphone__img {
+            width: 5.5rem; right: -0.375rem; top: 8.625rem;
+        }
+        .copy__legal {
+            margin: 7.5em 0 2.5em;
         }
     }
 
